--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@
 /.env.local.php
 /.env.*.local
 /public/bundles/
-/var/
+/var/cache/
+/var/log/
 /vendor/
 ###< symfony/framework-bundle ###
 
@@ -12,4 +13,4 @@
 /.web-server-pid
 ###< symfony/web-server-bundle ###
 
-!var/summa_test.db
+.idea/
